Elimina archivos PDF de perfil y agrega servicio para manejar configuraciones

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -13,6 +13,10 @@ form {
   /* Full-width */
 }
 
+.jumbotron {
+  margin-left: 160px;
+}
+
 .slider {
   -webkit-appearance: none;
   /* Override default styles */
