--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron junbotron-single d-flex align-items-center" style="background-image: url(assets/roxy/img/bg.jpg)">
+<div class="jumbotron jumbotron-single d-flex align-items-center" style="background-image: url(assets/roxy/img/bg.jpg)">
   <form (ngSubmit)="onSubmit()" #profileForm="ngForm" class="login-container">
     <div class="container mt-4">
       <div class="centrar">
