--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -14,12 +14,39 @@
   justify-content: center;
 }
 
-.settings-container {
-  position: absolute;
+#forms {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  width: 90%;
+  padding-top: 20px;
+  background: #d333b1;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  opacity: 0.9;
+}
+
+#features {
+  margin: 10px;
+}
+
+#container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  margin-left: 20vw;
+  gap: 40px;
+}
+
+
+/* .settings-container {
+  position: relative;
   left: 25%;
-  top: 50%;
+  top: 80%;
+
   transform: translate(-25%, -50%);
-  width: 30%;
+  width: 50%;
   max-width: 400px;
   padding: 20px;
   border-radius: 20px;
@@ -27,7 +54,8 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 1;
   opacity: 0.9;
-}
+} */
+
 
 section {
   padding: 20px;
