--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -5,67 +5,123 @@
       <form (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label>Color de texto</label>
-          <input type="color" class="color" [(ngModel)]="settingsData.colorTexto" name="colorTextoInput" />
+          <input
+            type="color"
+            class="color"
+            [(ngModel)]="settingsData.colorTexto"
+            name="colorTextoInput"
+          />
         </div>
         <div class="form-group">
           <label>Color de fondo</label>
-          <input type="color" class="color" [(ngModel)]="settingsData.colorFondo" name="colorFondoInput" />
+          <input
+            type="color"
+            class="color"
+            [(ngModel)]="settingsData.colorFondo"
+            name="colorFondoInput"
+          />
         </div>
         <div class="form-group">
           <label>Color primario</label>
-          <input type="color" class="color" [(ngModel)]="settingsData.colorPrimario" name="colorPrimarioInput" />
+          <input
+            type="color"
+            class="color"
+            [(ngModel)]="settingsData.colorPrimario"
+            name="colorPrimarioInput"
+          />
         </div>
         <div class="form-group">
           <label>Color secundario</label>
-          <input type="color" class="color" [(ngModel)]="settingsData.colorSecundario" name="colorSecundarioInput" />
+          <input
+            type="color"
+            class="color"
+            [(ngModel)]="settingsData.colorSecundario"
+            name="colorSecundarioInput"
+          />
         </div>
         <div class="form-group">
           <label>Tamaño de fuente de párrafos</label>
-          <input type="number" id="tamanio" [(ngModel)]="settingsData.tamaFuenteParrafos"
-            name="tamaFuenteParrafosInput" />
+          <input
+            type="number"
+            id="tamanio"
+            [(ngModel)]="settingsData.tamaFuenteParrafos"
+            name="tamaFuenteParrafosInput"
+          />
         </div>
         <div class="form-group">
           <label>Tamaño de fuente de títulos</label>
-          <input type="number" id="tamanio" [(ngModel)]="settingsData.tamaFuenteTitulos"
-            name="tamaFuenteTitulosInput" />
+          <input
+            type="number"
+            id="tamanio"
+            [(ngModel)]="settingsData.tamaFuenteTitulos"
+            name="tamaFuenteTitulosInput"
+          />
         </div>
         <div class="form-group">
           <label>Tamaño de fuente de subtítulos</label>
-          <input type="number" id="tamanio" [(ngModel)]="settingsData.tamaFuenteSubtitulos"
-            name="tamaFuenteSubtitulosInput" />
+          <input
+            type="number"
+            id="tamanio"
+            [(ngModel)]="settingsData.tamaFuenteSubtitulos"
+            name="tamaFuenteSubtitulosInput"
+          />
         </div>
         <div class="form-group">
           <label>Tipografía principal</label>
-          <input type="file" id="tamanio" [(ngModel)]="settingsData.tipoPrincipal" name="tipoPrincipalInput"
-            (change)="onFileSelected($event, 'primary')" accept=".ttf, .otf" />
+          <input
+            type="file"
+            id="tamanio"
+            [(ngModel)]="tipoPrincipal"
+            name="tipoPrincipalInput"
+            (change)="onFileSelected($event, 'primary')"
+            accept=".ttf, .otf"
+          />
         </div>
         <div class="form-group">
           <label>Tipografía secundaria</label>
-          <input type="file" id="tamanio" [(ngModel)]="settingsData.tipoSecundaria" name="tipoSecundariaInput"
-            (change)="onFileSelected($event, 'secondary')" accept=".ttf, .otf" />
+          <input
+            type="file"
+            id="tamanio"
+            [(ngModel)]="tipoSecundaria"
+            name="tipoSecundariaInput"
+            (change)="onFileSelected($event, 'secondary')"
+            accept=".ttf, .otf"
+          />
         </div>
         <a routerLink="/profile">
           <button type="submit">Guardar</button>
         </a>
       </form>
-
-
-
     </div>
-    <section id="features" class="" [ngStyle]="{
-              'color': settingsData.colorTexto,
-              'background-color': settingsData.colorFondo,
-              'font-family': fontName
-            }">
+    <section
+      id="features"
+      class=""
+      [ngStyle]="{
+        color: settingsData.colorTexto,
+        'background-color': settingsData.colorFondo,
+        'font-family': settingsData.primaryFontName
+      }"
+    >
       <div class="container">
         <div class="section-content">
           <!-- Section Title -->
           <div class="title-wrap mb-5" data-aos="fade-up">
-            <h2 value="16px" class="section-title"
-              [ngStyle]="{ 'font-size': settingsData.tamaFuenteTitulos + 'px' , 'font-family': fontName}">
+            <h2
+              value="16px"
+              class="section-title"
+              [ngStyle]="{
+                'font-size': settingsData.tamaFuenteTitulos + 'px',
+                'font-family': settingsData.primaryFontName
+              }"
+            >
               Este es un título
             </h2>
-            <p class="section-sub-title" [ngStyle]="{ 'font-size': settingsData.tamaFuenteParrafos + 'px'}">
+            <p
+              class="section-sub-title"
+              [ngStyle]="{
+                'font-size': settingsData.tamaFuenteParrafos + 'px'
+              }"
+            >
               Este es un texto de párrafo
             </p>
           </div>
@@ -76,90 +132,174 @@
               <div class="row">
                 <!-- Features Item -->
                 <div class="col-md-4 col-sm-12 text-center mt-4">
-                  <div class="shadow rounded feature-item p-4 mb-4"
-                    [ngStyle]="{ 'background-color': settingsData.colorSecundario}" data-aos="fade-up">
+                  <div
+                    class="shadow rounded feature-item p-4 mb-4"
+                    [ngStyle]="{
+                      'background-color': settingsData.colorSecundario
+                    }"
+                    data-aos="fade-up"
+                  >
                     <div class="my-4">
                       <i class="lnr lnr-cog fs-40"></i>
                     </div>
-                    <h4 [ngStyle]="{ 'font-size': settingsData.tamaFuenteSubtitulos + 'px' , 'font-family': fontName}">
+                    <h4
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteSubtitulos + 'px',
+                        'font-family': settingsData.primaryFontName
+                      }"
+                    >
                       Subtítulo 1
                     </h4>
-                    <p [ngStyle]="{ 'font-size': settingsData.tamaFuenteParrafos + 'px'}">
-                      Párrafo 1 Lorem ipsum dolor sit amet consectetur adipisicing
-                      elit.
+                    <p
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteParrafos + 'px'
+                      }"
+                    >
+                      Párrafo 1 Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit.
                     </p>
                   </div>
-                  <div class="shadow rounded feature-item p-4 mb-4"
-                    [ngStyle]="{ 'background-color': settingsData.colorSecundario}" data-aos="fade-up">
+                  <div
+                    class="shadow rounded feature-item p-4 mb-4"
+                    [ngStyle]="{
+                      'background-color': settingsData.colorSecundario
+                    }"
+                    data-aos="fade-up"
+                  >
                     <div class="my-4">
                       <i class="lnr lnr-frame-contract fs-40"></i>
                     </div>
-                    <h4 [ngStyle]="{ 'font-size': settingsData.tamaFuenteSubtitulos + 'px' , 'font-family': fontName}">
+                    <h4
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteSubtitulos + 'px',
+                        'font-family': settingsData.primaryFontName
+                      }"
+                    >
                       Subtítulo 2
                     </h4>
-                    <p [ngStyle]="{ 'font-size': settingsData.tamaFuenteParrafos + 'px'}">
-                      Párrafo 2 Lorem ipsum dolor sit amet consectetur adipisicing
-                      elit.
+                    <p
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteParrafos + 'px'
+                      }"
+                    >
+                      Párrafo 2 Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit.
                     </p>
                   </div>
                 </div>
                 <!-- End of Feature Item -->
                 <!-- Features Item -->
                 <div class="col-md-4 col-sm-12 text-center">
-                  <div class="shadow rounded feature-item p-4 mb-4"
-                    [ngStyle]="{ 'background-color': settingsData.colorSecundario}" data-aos="fade-up">
+                  <div
+                    class="shadow rounded feature-item p-4 mb-4"
+                    [ngStyle]="{
+                      'background-color': settingsData.colorSecundario
+                    }"
+                    data-aos="fade-up"
+                  >
                     <div class="my-4">
                       <i class="lnr lnr-bubble fs-40"></i>
                     </div>
-                    <h4 [ngStyle]="{ 'font-size': settingsData.tamaFuenteSubtitulos + 'px' , 'font-family': fontName}">
+                    <h4
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteSubtitulos + 'px',
+                        'font-family': settingsData.primaryFontName
+                      }"
+                    >
                       Subtítulo 3
                     </h4>
-                    <p [ngStyle]="{ 'font-size': settingsData.tamaFuenteParrafos + 'px'}">
-                      Párrafo 3 Lorem ipsum dolor sit amet consectetur adipisicing
-                      elit.
+                    <p
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteParrafos + 'px'
+                      }"
+                    >
+                      Párrafo 3 Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit.
                     </p>
                   </div>
-                  <div class="shadow rounded feature-item p-4 mb-4"
-                    [ngStyle]="{ 'background-color': settingsData.colorSecundario }" data-aos="fade-up">
+                  <div
+                    class="shadow rounded feature-item p-4 mb-4"
+                    [ngStyle]="{
+                      'background-color': settingsData.colorSecundario
+                    }"
+                    data-aos="fade-up"
+                  >
                     <div class="my-4">
                       <i class="lnr lnr-magic-wand fs-40"></i>
                     </div>
-                    <h4 [ngStyle]="{ 'font-size': settingsData.tamaFuenteSubtitulos + 'px' , 'font-family': fontName}">
+                    <h4
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteSubtitulos + 'px',
+                        'font-family': settingsData.primaryFontName
+                      }"
+                    >
                       Subtítulo 4
                     </h4>
-                    <p [ngStyle]="{ 'font-size': settingsData.tamaFuenteParrafos + 'px'}">
-                      Párrafo 4 Lorem ipsum dolor sit amet consectetur adipisicing
-                      elit.
+                    <p
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteParrafos + 'px'
+                      }"
+                    >
+                      Párrafo 4 Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit.
                     </p>
                   </div>
                 </div>
                 <!-- End of Feature Item -->
                 <!-- Features Item -->
                 <div class="col-md-4 col-sm-12 text-center mt-4">
-                  <div class="shadow rounded feature-item p-4 mb-4"
-                    [ngStyle]="{ 'background-color': settingsData.colorSecundario }" data-aos="fade-up">
+                  <div
+                    class="shadow rounded feature-item p-4 mb-4"
+                    [ngStyle]="{
+                      'background-color': settingsData.colorSecundario
+                    }"
+                    data-aos="fade-up"
+                  >
                     <div class="my-4">
                       <i class="lnr lnr-clock fs-40"></i>
                     </div>
-                    <h4 [ngStyle]="{ 'font-size': settingsData.tamaFuenteSubtitulos + 'px' , 'font-family': fontName}">
+                    <h4
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteSubtitulos + 'px',
+                        'font-family': settingsData.primaryFontName
+                      }"
+                    >
                       Subtítulo 5
                     </h4>
-                    <p [ngStyle]="{ 'font-size': settingsData.tamaFuenteParrafos + 'px'}">
-                      Párrafo 5 Lorem ipsum dolor sit amet consectetur adipisicing
-                      elit.
+                    <p
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteParrafos + 'px'
+                      }"
+                    >
+                      Párrafo 5 Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit.
                     </p>
                   </div>
-                  <div class="shadow rounded feature-item p-4 mb-4"
-                    [ngStyle]="{ 'background-color': settingsData.colorSecundario }" data-aos="fade-up">
+                  <div
+                    class="shadow rounded feature-item p-4 mb-4"
+                    [ngStyle]="{
+                      'background-color': settingsData.colorSecundario
+                    }"
+                    data-aos="fade-up"
+                  >
                     <div class="my-4">
                       <i class="lnr lnr-thumbs-up fs-40"></i>
                     </div>
-                    <h4 [ngStyle]="{ 'font-size': settingsData.tamaFuenteSubtitulos + 'px' , 'font-family': fontName}">
+                    <h4
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteSubtitulos + 'px',
+                        'font-family': settingsData.primaryFontName
+                      }"
+                    >
                       Subtítulo 6
                     </h4>
-                    <p [ngStyle]="{ 'font-size': settingsData.tamaFuenteParrafos + 'px'}">
-                      Párrafo 6 Lorem ipsum dolor sit amet consectetur adipisicing
-                      elit.
+                    <p
+                      [ngStyle]="{
+                        'font-size': settingsData.tamaFuenteParrafos + 'px'
+                      }"
+                    >
+                      Párrafo 6 Lorem ipsum dolor sit amet consectetur
+                      adipisicing elit.
                     </p>
                   </div>
                 </div>
@@ -168,11 +308,14 @@
             </div>
             <!-- End of Features Holder-->
           </div>
-          <button class="primario" [ngStyle]="{
-                    color: settingsData.colorTexto,
-                    'background-color': settingsData.colorPrimario,
-                    'font-size': settingsData.tamaFuenteParrafos + 'px'
-                  }">
+          <button
+            class="primario"
+            [ngStyle]="{
+              color: settingsData.colorTexto,
+              'background-color': settingsData.colorPrimario,
+              'font-size': settingsData.tamaFuenteParrafos + 'px'
+            }"
+          >
             Botón
           </button>
         </div>
