--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,12 +6,17 @@
     <ul>
       <li>
         <a routerLink="/profile" routerLinkActive="active">
-          <i class="fas fa-user"></i> Perfil
+          <i class="fas fa-user btn btn-secondary"></i> Perfil
         </a>
       </li>
       <li>
         <a routerLink="/settings" routerLinkActive="active">
-          <i class="fas fa-cog"></i> Configuración
+          <i class="fas fa-cog btn btn-secondary"></i> Configuración
+        </a>
+      </li>
+      <li>
+        <a routerLink="/home" routerLinkActive="active">
+          <i class="fas fa-sign-out-alt btn btn-primary"></i> Salir
         </a>
       </li>
     </ul>
