Creacion del contenedor de paletas guardadas

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -322,7 +322,6 @@
       </div>
     </section>
   </div>
-
   <!-- <div class="rectangle-1"></div>
   <div class="rectangle-2"></div>
   <div class="rectangle-transparent-1"></div>
@@ -342,4 +341,11 @@
   <div class="triangle triangle-4">
     <img src="assets/roxy/img/obj_triangle.png" alt="no encontrado" />
   </div> -->
+</div>
+
+<div id="contenedor" class="jumbotron d-flex align-items-center">
+  <h2 class="caja h2">Paletas de configuaciones guardadas</h2>
+  <div class="caja">(Configuracion 1)</div>
+  <div class="caja">(Configuracion 2)</div>
+  <div class="caja">(Configuracion 3)</div>
 </div>
